'editing-html-css'

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-.pt-from-navbar {
-  padding-top: 5rem;
+body {
+  zoom: 110%;
 }
+
+/* h1 {
+  margin: 25px 25px 25px 0px;
+}
+
+h2 {
+  margin: 20px;
+} */
