--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+.gridtest {
+  border-style: solid;
+  border-color: red;
+}
+
 body {
   zoom: 110%;
 }
 
 h1 {
-  padding-top: 60px;
-  margin: 0px 0px 25px 0px;
+  margin-top: 200px;
+  margin-bottom: 60px;
 }
 
 h2 {
