--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
   background-attachment: fixed;
 }
 
-h2 {
-  padding-top: 400px;
+.custom_margintop {
+  margin-top: 50vh;
 }
 
 .project_images {
@@ -25,13 +25,14 @@ h2 {
   color: white;
 }
 
-.absolute_center {
+.intro_position {
   width: 600px;
-  height: 100vh;
+  height: 80vh;
   margin: auto;
   max-width: 100%;
   max-height: 100%;
   overflow: auto;
+  padding: 10px;
 }
 
 .hidden {
@@ -41,4 +42,22 @@ h2 {
 
 .fade-in {
   opacity: 1;
+}
+
+.card {
+  transition: box-shadow 0.3s ease;
+  box-shadow: none;
+  border-radius: 25px;
+}
+
+.card:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+}
+
+.rounded_edges {
+  border-radius: 15px;
+}
+
+.rounded_top_edges {
+  border-radius: 15px 15px 0 0 !important;
 }
