--- a/style.css
+++ b/style.css
@@ -26,12 +26,9 @@ body {
 }
 
 .intro_position {
-  width: 600px;
-  height: 80vh;
+  max-width: 600px;
+  min-height: 80vh;
   margin: auto;
-  max-width: 100%;
-  max-height: 100%;
-  overflow: auto;
   padding: 10px;
 }
 
@@ -64,4 +61,8 @@ body {
 
 .very_rounded_edges {
   border-radius: 25px;
+}
+
+.skill_card {
+  max-width: 16rem;
 }
