--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 } */
 
 body {
+  font-family: "Tahoma", sans-serif !important;
   background-image: url("img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,7 +12,7 @@ body {
 }
 
 .custom_margintop {
-  margin-top: 50vh;
+  margin-top: 40vh;
 }
 
 .project_images {
@@ -34,7 +35,7 @@ body {
 
 .hidden {
   opacity: 0;
-  transition: opacity 1s;
+  transition: opacity 2s;
 }
 
 .fade-in {
