--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   outline: solid 1px red;
-} */
+}
 
 body {
   font-family: "Tahoma", sans-serif !important;
@@ -76,4 +76,44 @@ section {
 
 .skill_card {
   max-width: 16rem;
+}
+
+.nav__link {
+  position: relative;
+}
+
+.nav__link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav__link:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+.nav__link:hover {
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav__link.hover-class::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(255, 255, 255);
+  transition: all 0.3s ease-in-out;
+}
+
+.nav__link.hover-class {
+  color: #fff;
+  transition: all 0.3s ease-in-out;
 }
