--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body {
   backdrop-filter: blur(4px);
 }
 
-.custom_margintop {
-  margin-top: 30vh;
-}
-
 section {
   padding-top: 100px;
+}
+
+.custom_margintop {
+  margin-top: 30vh;
 }
 
 .project_images {
@@ -61,6 +61,13 @@ section {
   background: linear-gradient(to right, #d1e0ff, #5384ed);
 }
 
+.card-deck-sortable {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .rounded_edges {
   border-radius: 15px;
 }
@@ -70,7 +77,7 @@ section {
 }
 
 .very_rounded_edges {
-  border-radius: 25px;
+  border-radius: 30px;
 }
 
 .skill_card {
