--- a/style.css
+++ b/style.css
@@ -146,3 +146,11 @@ body {
 .about_bg {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
 }
+
+.forkify_logo {
+  width: 25%;
+  display: block;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(-10%);
+}
