--- a/style.css
+++ b/style.css
@@ -167,6 +167,15 @@ body {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 40rem) {
+  body {
+  }
+  .intro_style {
+  }
+  .intro_bg {
+  }
+}
+
 @media only screen and (min-width: 3840px) {
   body {
     zoom: 220%;
