--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body {
   margin-top: 20vh;
 }
 
+.navbar-brand {
+  background-color: #029800;
+}
 .section_padding {
   padding-top: 100px;
 }
@@ -55,6 +58,10 @@ body {
   font-size: larger;
 }
 
+.skill_img {
+  max-width: 2.5em;
+  margin-right: 7px;
+}
 /* TODO */
 /* #skills {
   background-color: rgba(0, 0, 0, 0.1);
