content-changes-and-fixing-mobile-skill-view

--- a/style.css
+++ b/style.css
@@ -238,8 +238,7 @@ body {
     right: 0;
   }
 
-  /* TODO */
-  #skills .card .progress {
+  #skills .card .mobile__toggler {
     display: none;
   }
 }
