--- a/style.css
+++ b/style.css
@@ -4,12 +4,20 @@
 
 body {
   font-family: "Tahoma", sans-serif !important;
+  text-align: justify;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
   background-image: url("img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 bottom; /* instead of center, use 0, some bugs can appear in mobile view*/
-  background-attachment: fixed;
-  text-align: justify;
+  background-position: 0 bottom;
 }
 
 .blurred_backg {
